--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
       <li>
         <div class="post-archive-iterm">
           <span class="post-archive-date">{{ post.date | date: "%Y-%m-%d" }}</span>
-          <a class="link-1 post-archive-title {{ status }}" href="{{ post.url }}">{{ post.title }}</a>
+          <a class="link-1 post-archive-title {{ status }}" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
         </div>
       </li>
       {% endfor %}
@@ -49,7 +49,7 @@ layout: default
   <!-- post navigator -->
   <div class="post-nav">
     {% if page.previous %}
-    <a class="post-nav-previous"href="{{ page.previous.url }}">{{ page.previous.title }}</a>
+    <a class="post-nav-previous"href="{{ page.previous.url | prepend: site.baseurl }}">{{ page.previous.title }}</a>
     {% endif %}
 
     {% if page.previous and page.next %}
@@ -57,7 +57,7 @@ layout: default
     {% endif %}
 
     {% if page.next %}
-    <a class="post-nav-next" href="{{ page.next.url }}">{{ page.next.title }}</a>
+    <a class="post-nav-next" href="{{ page.next.url | prepend: site.baseurl }}">{{ page.next.title }}</a>
     {% endif %}
   </div>
 
