--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div id="footer">
-  <p>&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> <a class="link-1" href="/">{{ site.title }}</a></p>
+  <p>&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> <a class="link-1" href="{{ site.baseurl }}">{{ site.title }}</a></p>
 
   <p>Powered by <a class="link-1" href="http://jekyllrb.com/">Jekyll</a> with <a class="link-1" href="https://github.com/kkninjae/book">Book</a> theme.</p>
 </div>
