--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,8 +4,8 @@
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
 <!-- favicon -->
-<link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon }}" />
-<link rel="icon" type="image/x-icon" href="{{ site.favicon }}" />
+<link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon | prepend: site.baseurl }}" />
+<link rel="icon" type="image/x-icon" href="{{ site.favicon | prepend: site.baseurl }}" />
 
 <!-- RSS -->
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed.xml" />
