--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,4 @@
 <link rel="icon" type="image/x-icon" href="{{ site.favicon | prepend: site.baseurl }}" />
 
 <!-- RSS -->
-<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed.xml" />
+<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.baseurl }}/feed.xml" />
