--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -6,4 +6,9 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 ga('create', '{{ site.google_analytics }}', 'auto');
 ga('send', 'pageview');
+
+if(location.hostname === "liulang.co") {
+  location.href = "http://book.liulang.co/" + location.hash
+}
+
 </script>
